Bug 262456 - asmc(4): Add support for Macmini 5,1 (2011) and 5,3 and macmini 7,1 (2014) models
Summary: asmc(4): Add support for Macmini 5,1 (2011) and 5,3 and macmini 7,1 (2014) mo...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 12.2-STABLE
Hardware: Any Any
: --- Affects Many People
Assignee: Mark Johnston
URL:
Keywords: easy, feature, needs-patch, needs-qa
Depends on:
Blocks:
 
Reported: 2022-03-10 03:26 UTC by Trev
Modified: 2022-05-18 22:04 UTC (History)
3 users (show)

See Also:
koobs: maintainer-feedback? (markj)
koobs: maintainer-feedback? (adrian)
koobs: maintainer-feedback? (dab)
koobs: mfc-stable13?
koobs: mfc-stable12?


Attachments
asmc.c patch (34.28 KB, text/plain)
2022-03-10 03:26 UTC, Trev
no flags Details
asmcvar.h patch (25.91 KB, text/plain)
2022-03-10 03:27 UTC, Trev
no flags Details
asmc.c patch (786 bytes, text/plain)
2022-03-10 03:32 UTC, Trev
no flags Details
asmcvar.h patch (1.39 KB, text/plain)
2022-03-10 03:33 UTC, Trev
no flags Details
asmc.c patch (786 bytes, patch)
2022-03-10 09:05 UTC, Trev
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Trev 2022-03-10 03:26:36 UTC
Created attachment 232359 [details]
asmc.c patch

Adds support for 2011 macmini5,1 and macmini5,3 and 2014 macmini 7,1 hardware to asmc kernel module

The Apple System Management Controller (asmc) kernel module lacks details for the above macmini hardware models.

Fix: See attached patches for asmc.c and asmcvar.h which have been running successfully tested on FreeBSD 12 and FreeBSD 13 systems.

How-To-Repeat: kldload supplied asmc.ko

Patch against FreeBSD stable/12 r371721 | git2svn | 2022-03-08 18:13:27 +1100 (Tue, 08 Mar 2022) attached.
Comment 1 Trev 2022-03-10 03:27:23 UTC
Created attachment 232360 [details]
asmcvar.h patch
Comment 2 Trev 2022-03-10 03:32:24 UTC
Created attachment 232361 [details]
asmc.c patch
Comment 3 Trev 2022-03-10 03:33:06 UTC
Created attachment 232362 [details]
asmcvar.h patch
Comment 4 Trev 2022-03-10 09:05:24 UTC
Created attachment 232366 [details]
asmc.c patch
Comment 5 Kubilay Kocak freebsd_committer freebsd_triage 2022-04-27 03:45:37 UTC
^Triage (at community user request): Request feedback / commit from the folks who have landed asmc support before. Please cancel flag if you don't have any available cycles.

With specific hardware model availability being unlikely, whats the best way to get these landed?

This one may need a trivial rebase on CURRENT. 

@Reporter (Trev), if you're able to produce a patch against CURRENT (obsoleting the first), that would be great.
Comment 6 commit-hook freebsd_committer freebsd_triage 2022-05-04 15:34:38 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=601abb300ce8b28d84c300e70881039d943c28b9

commit 601abb300ce8b28d84c300e70881039d943c28b9
Author:     Trev <fbsdbugs4@sentry.org>
AuthorDate: 2022-05-04 15:00:40 +0000
Commit:     Mark Johnston <markj@FreeBSD.org>
CommitDate: 2022-05-04 15:31:01 +0000

    asmc: Add support for Macmini 5,1 (2011) and 5,3 and 7,1 (2014) models

    PR:             262456
    MFC after:      2 weeks

 sys/dev/asmc/asmc.c    | 31 ++++++++++++++++++++++++++++++-
 sys/dev/asmc/asmcvar.h | 31 +++++++++++++++++++++++++++++++
 2 files changed, 61 insertions(+), 1 deletion(-)
Comment 7 commit-hook freebsd_committer freebsd_triage 2022-05-18 21:27:43 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=d6fe8a8eab1891a098a03ea92621c71485f2c2a9

commit d6fe8a8eab1891a098a03ea92621c71485f2c2a9
Author:     Trev <fbsdbugs4@sentry.org>
AuthorDate: 2022-05-04 15:00:40 +0000
Commit:     Mark Johnston <markj@FreeBSD.org>
CommitDate: 2022-05-18 21:15:58 +0000

    asmc: Add support for Macmini 5,1 (2011) and 5,3 and 7,1 (2014) models

    PR:             262456

    (cherry picked from commit 601abb300ce8b28d84c300e70881039d943c28b9)

 sys/dev/asmc/asmc.c    | 31 ++++++++++++++++++++++++++++++-
 sys/dev/asmc/asmcvar.h | 31 +++++++++++++++++++++++++++++++
 2 files changed, 61 insertions(+), 1 deletion(-)
Comment 8 Mark Johnston freebsd_committer freebsd_triage 2022-05-18 22:04:46 UTC
Thanks for the patch!