asmc: Add support for Macmini 5,1 (2011) and 5,3 and 7,1 (2014) models

PR:		262456

(cherry picked from commit 601abb300ce8b28d84c300e70881039d943c28b9)